# sep

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGES.md  CMakeLists.txt  FindSEP.cmake  MANIFEST.in  Makefile  README.md  bench.py  pyproject.toml  sep.pyx  sep_pjw.pyx  setup.py  test.py  tox.ini
.github/workflows/: build-wheels-upload-pypi.yml  python-package-tox.yml
ctest/: compare.py  test_image.c
data/: README.md
docs/: apertures.rst  changelog.rst  conf.py  filter.rst  index.rst  reference.rst  rtd-pip-requirements  tutorial.ipynb
docs/changelogs/: changelog.rst  changes_to_c_api.rst  new_changes.rst  original_changes.md
src/: analyse.c  aperture.c  aperture.i  background.c  convolve.c  deblend.c  extract.c  extract.h  lutz.c  overlap.h  sep.h  sepcore.h  util.c
